Add base elements to header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
   <title>Landing Page</title>
 </head>
 <body>
-  <div id="header"></div>
+  <div id="header">
+    <div class="navigator">
+      <a class="homepage" href="./">Odin Project</a>
+      <ul id="navbar">
+        <li><a href="./pages/one.html">header link one</a></li>
+        <li><a href="./pages/two.html">header link two</a></li>
+        <li><a href="./pages/three.html">header link three</a></li>
+      </ul>
+    </div>
+    <div class="hero">
+      <div class="text">
+        <h1>This website is awesome</h1>
+        <h3>Dolorum dolorem ipsa nisi architecto. Sint voluptatem quos consequatur. Eligendi cum nulla aliquid aperiam voluptates pariatur.</h3>
+        <div><button>Sign up</button></div>
+      </div>
+      <div class="image">
+        <img src="" alt="This is a placeholder for the hero image">
+      </div>
+    </div>
+  </div>
   <div id="content"></div>
   <div id="footer"></div>
 </body>
