Add team area to content and fill it with placeholders

--- a/index.html
+++ b/index.html
@@ -32,7 +32,31 @@
       </div>
     </div>
   </div>
-  <div id="content"></div>
+  <div id="content">
+    <div class="team">
+      <h2>Meet our team!</h2>
+      <ul>
+        <li>
+          <img src="" alt="Team member #1">
+          <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
+        </li>
+        <li>
+          <img src="" alt="Team member #2">
+          <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
+        </li>
+        <li>
+          <img src="" alt="Team member #3">
+          <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
+        </li>
+        <li>
+          <img src="" alt="Team member #4">
+          <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
+        </li>
+      </ul>
+    </div>
+    <div class="quote"></div>
+    <div class="join-us"></div>
+  </div>
   <div id="footer"></div>
 </body>
 </html>
