Add placeholder to quote area

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         </li>
       </ul>
     </div>
-    <div class="quote"></div>
+    <div class="quote">
+      <p class="sentence">
+        Dolor aspernatur dignissimos iste explicabo facilis. Molestiae et quod pariatur. Minus et aut tempora voluptate debitis. Voluptatem impedit qui omnis. Odio cum incidunt eaque quod quis.
+        <span class="author">Lorem Ipsum</span>
+      </p>
+    </div>
     <div class="join-us"></div>
   </div>
   <div id="footer"></div>
