Add placeholder elements to "Join us" area

--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
         <span class="author">Lorem Ipsum</span>
       </p>
     </div>
-    <div class="join-us"></div>
+    <div class="join-us">
+      <div class="message">
+        <h3>Join us right now!</h3>
+        <p>Sign up to receive monthly emails about our new products!</p>
+      </div>
+      <div class="button-container">
+        <button>Sign up</button>
+      </div>
+    </div>
   </div>
   <div id="footer"></div>
 </body>
