--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       </div>
     </div>
   </div>
-  <div id="footer"></div>
+  <div id="footer">
+    <p>Copyright © The Odin Project 2022</p>
+  </div>
 </body>
 </html>
