Add placeholder pictures from Pexels

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div><button>Sign up</button></div>
       </div>
       <div class="image">
-        <img src="" alt="This is a placeholder for the hero image">
+        <img src="https://images.pexels.com/photos/11432357/pexels-photo-11432357.jpeg" alt="This is a placeholder for the hero image" style="object-position: 50% 85%;">
       </div>
     </div>
   </div>
@@ -37,19 +37,19 @@
       <h2>Meet our team!</h2>
       <ul>
         <li>
-          <img src="" alt="Team member #1">
+          <img src="https://images.pexels.com/photos/3748221/pexels-photo-3748221.jpeg" alt="Team member #1" style="object-position: 50% 20%">
           <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
         </li>
         <li>
-          <img src="" alt="Team member #2">
+          <img src="https://images.pexels.com/photos/2169434/pexels-photo-2169434.jpeg" alt="Team member #2">
           <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
         </li>
         <li>
-          <img src="" alt="Team member #3">
+          <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg" alt="Team member #3">
           <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
         </li>
         <li>
-          <img src="" alt="Team member #4">
+          <img src="https://images.pexels.com/photos/1832959/pexels-photo-1832959.jpeg" alt="Team member #4" style="object-position: 50% 20%">
           <p>Assumenda cupiditate exercitationem corporis deleniti.</p>
         </li>
       </ul>
